--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Zoo</string>
+    <string name="hello_world">Hello World</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_opened">Select an item</string>
     <string name="drawer_closed">Zoo</string>
