--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Zoo</string>
     <string name="hello_world">Hello World</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_opened">Select an item</string>
     <string name="drawer_closed">Zoo</string>
+
+    <string name="exhibits_feed" translatable="false">
+        https://gist.githubusercontent.com/klaskagan/f8bc65a315829bc2bcab/raw/f436990baf3b7de3c19e8937d0ecf0315e1c4e22
+    </string>
 </resources>
