Finished lesson 06-01. Code clean up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Zoo</string>
-    <string name="hello_world">Hello World</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_opened">Select an item</string>
     <string name="drawer_closed">Zoo</string>
@@ -16,6 +15,10 @@
     <string name="pins_feed" translatable="false">
         https://gist.githubusercontent.com/klaskagan/3f4deddd69e8e4c742c5/raw/dfcc826811de4ce7a6756256f63b8d44d6420e34
     </string>
+
+    <string name="section_exhibits">Exhibits</string>
+    <string name="section_gallery">Gallery</string>
+    <string name="section_map">Map</string>
 
     <!-- Map -->
     <string name="zoo">Zoo</string>
